# spatula

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  404.html  Justfile  LICENSE  README.md  build_docs.sh  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  release.sh  run_tests.sh  setup.py  sitemap.xml  tasks.py  trifold.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yml
advanced-techniques/: index.html
advanced-usage/: index.html
anatomy-of-a-scrape/: index.html
changelog/: index.html
cli/: index.html
code_of_conduct/: index.html
contributing/: index.html
data-models/: index.html
docs/: advanced-techniques.md  anatomy-of-a-scrape.md  changelog.md  changelog.rst  cli.md  cli.rst  code_of_conduct.md  conf.py  contributing.md  data-models.md  index.md  index.rst  next-steps.md  pages.rst  philosophy.md  philosophy.rst  quickstart.md  quickstart.rst  reference.md  reference.rst  scraper-basics.md  scraper-input.md  tutorial.rst  usage.rst
next-steps/: index.html
philosophy/: index.html
quickstart/: index.html
reference/: index.html
scraper-basics/: index.html
scraper-input/: index.html
search/: search_index.json
spatula/: __init__.py  base.py  cli.py  core.py  pages.py  selectors.py
src/spatula/: __init__.py  cli.py  config.py  core.py  maybe.py  pages.py  selectors.py  sources.py  test_utils.py  utils.py  workflow.py
tests/: examples.py  test_cli.py  test_page_base.py  test_pages.py  test_selectors.py  test_sources.py  test_utils.py  test_workflow.py
