[tool.poetry]
name = "spatula"
version = "0.6.0"
description = "lightweight structured scraping toolkit"
authors = ["James Turk <dev@jamesturk.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jamesturk/spatula/"

[tool.poetry.scripts]
spatula = 'spatula.cli:cli'

[tool.poetry.dependencies]
python = "^3.7"
scrapelib = "^2.0.2"
click = "^7.1.2"
lxml = "^4.6.2"
cssselect = "^1.1.0"
openpyxl = "^3.0.6"
attrs = {version = "^20.3.0", extras = ["attrs"]}
ipython = {version = "^7.19.0", extras = ["shell"]}
Sphinx = {version = "^3.4.3", extras = ["docs"]}
sphinx-rtd-theme = {version = "^0.5.1", extras = ["docs"]}
sphinx-click = {version = "^2.5.0", extras = ["docs"]}

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-cov = "^2.11.1"
flake8 = "^3.8.4"
black = "^20.8b1"
bump2version = "^1.0.1"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
