[tool.poetry]
name = "spatula"
version = "0.8.5"
description = "A modern Python library for writing maintainable web scrapers."
authors = ["James Turk <dev@jamesturk.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jamesturk/spatula/"
documentation = "https://jamesturk.github.io/spatula/"

[tool.poetry.scripts]
spatula = 'spatula.cli:cli'

[tool.poetry.dependencies]
python = "^3.7"
scrapelib = "^2.0.6"
click = "^7.1.2"
lxml = "^4.6.2"
cssselect = "^1.1.0"
openpyxl = "^3.0.6"
attrs = {version = "^20.3.0", extras = ["attrs"]}
ipython = {version = "^7.19.0", extras = ["shell"]}

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-cov = "^2.11.1"
flake8 = "^3.8.4"
black = "^20.8b1"
bump2version = "^1.0.1"
mypy = "^0.900"
invoke = "^1.5.0"
mkdocs-material = "^7.1.7"
mkdocs-click = "^0.4.0"
mkdocstrings = "^0.15.1"
types-requests = "^0.1.11"
types-click = "^7.1.1"

[tool.mypy]
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
