[project]
name = "spatula"
version = "1.0.0"
description = "A modern Python library for writing maintainable web scrapers."
authors = [
    { name = "james turk", email = "dev@jpt.sh" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "scrapelib>=2.0.6,<3.0.0",
    "click>=8.0.0,<9.0.0",
    "lxml>4.6,<6",
    "cssselect>=1.1.0,<2.0.0",
    "openpyxl>=3.0.6,<4.0.0",
    "attrs>=20.3.0,<21.0.0",
]

[project.optional-dependencies]
shell = [
    "ipython>=7.19.0,<8.0.0",
]

[project.scripts]
spatula = "spatula.cli:cli"

[project.urls]
Repository = "https://codeberg.org/jpt/spatula/"
Documentation = "https://jamesturk.github.io/spatula/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=6.2.1,<7.0.0",
    "pytest-cov>=2.11.1,<3.0.0",
    "bump2version>=1.0.1,<2.0.0",
    "mypy>=0.900,<1.0.0",
    "invoke>=1.5.0,<2.0.0",
    "mkdocs-material",
    "mkdocs-click",
    "mkdocstrings",
    "mkdocstrings-python",
    "importlib-metadata<5.0",
    "types-requests>=0.1.11,<1.0.0",
    "types-click>=7.1.1,<8.0.0",
    "ruff",
]

[tool.mypy]
disallow_untyped_defs = true
